# HumanVoiceAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_STRATEGY.md  DEPLOYMENT_SUCCESS.md  Dockerfile  ENVIRONMENT_SETUP.md  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  MathBible.md  PERFORMANCE_TUNING.md  README.md  RL_PIPELINE_ROADMAP.md  SYSTEM_ARCHITECTURE_OVERVIEW.md  UPDATEDIMPLIMENTATIONGUIDE.MD  UPDATEDMATHBIBLE.md  demo.py  deploy-local.sh  deploy-stable.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-rl.txt  requirements.txt  setup.py  setup.sh  train_ser.py  train_vocoder.py
.github/workflows/: ci.yml
configs/: app_config.yaml  rl_policy_config.yaml  ser_config.yaml
docs/: RL_PIPELINE.md  development.md
human-voice-ai-frontend/: README.md  babel.config.js  jest.config.js  jest.setup.js  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.test.json  vercel.json
human-voice-ai-frontend/.github/workflows/: ci.yml
human-voice-ai-frontend/src/app/: globals.css  layout.tsx  page.tsx
human-voice-ai-frontend/src/app/__tests__/: page.test.tsx
human-voice-ai-frontend/src/app/about/: page.tsx
human-voice-ai-frontend/src/app/architecture/: page.tsx
human-voice-ai-frontend/src/app/learn/: page.tsx
human-voice-ai-frontend/src/app/math/: page.tsx
human-voice-ai-frontend/src/components/: Equation.tsx  NavBar.tsx
human-voice-ai-frontend/src/types/: react-katex.d.ts
human-voice-ai-frontend/src/utils/: audioUtils.ts
human-voice-ai-frontend/src/utils/__tests__/: audioUtils.test.ts
scripts/: demo_tts_emotions.py  run_rl_training.py  test_tts_emotions.py  train_rl_agent.py
scripts/train/: train_emotion.py  train_ser.py  train_vocoder.py
src/: app.py  app_simple.py  stable_voice_ai.py
src/emotion/: ser_model.py
src/human_voice_ai/: __main__.py  base_dataset.py  base_model.py  base_trainer.py
src/human_voice_ai/audio/: __init__.py  audio_utils.py  feature_extractor.py  streaming.py
src/human_voice_ai/emotion/: ser_dataset.py  ser_model.py  ser_trainer.py
src/human_voice_ai/interpretability/: shap_explainer.py
src/human_voice_ai/policy/: __init__.py  manager.py  rl_policy.py
src/human_voice_ai/rl/: __init__.py  agent.py  environment.py
src/human_voice_ai/tts/: tts_engine.py
src/human_voice_ai/utils/: metrics.py
src/tts/: tts_engine.py
src/utils/: config.py
src/vocoder/: hifigan.py
tests/: test_feature_extractor.py
tests/fixtures/: test_policy_config.yaml
tests/integration/: test_rl_pipeline.py  test_tts_emotions.py
tests/system/: test_rl_workflow.py
tests/unit/policy/: conftest.py  test_policy_manager.py  test_rl_policy.py
tests/unit/tts/: __init__.py  test_tts_engine.py
(+1 files in other folders)
