[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "human-voice-ai"
version = "0.1.0"
description = "Real-time emotion-adaptive voice agent for Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jaden Fix", email = "jadenfix123@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "librosa>=0.10.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "scikit-learn>=1.2.2",
    "soundfile>=0.12.1",
    "pyaudio>=0.2.13",
    "pydub>=0.25.1",
    "pyyaml>=6.0",
    "tensorboard>=2.13.0",
    "matplotlib>=3.7.1",
    "pandas>=2.0.2",
    "tensorboard>=2.13.0",
    "tqdm>=4.65.0",
    "types-pyyaml>=6.0.12.2",
    "types-requests>=2.28.11.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
    "pre-commit>=3.3.2",
]

[project.urls]
Homepage = "https://github.com/jadenfix/HumanVoiceAI"
Documentation = "https://github.com/jadenfix/HumanVoiceAI#readme"
Issues = "https://github.com/jadenfix/HumanVoiceAI/issues"
Source = "https://github.com/jadenfix/HumanVoiceAI"

[tool.setuptools.packages.find]
where = ["src"]
include = ["human_voice_ai*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true

[metadata]
license = MIT
license_files = LICENSE
platform = macOS
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.11',
    'Operating System :: MacOS :: MacOS X',
    'Topic :: Multimedia :: Sound/Audio :: Speech',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
